# ans-wrapper

./: .gitignore  README.md  README.rst  notebook.ipynb  notes.txt  noxfile.py  pyproject.toml  sandbox.ipynb  sandbox.py  script.py  testing.py
ans_wrapper/: __init__.py  demonstracoes_contabeis.py  utils.py
docs/source/: conf.py  index.rst  usage.rst
notebooks/: beneficiarios.ipynb  demonstracoes_contabeis.ipynb
src/ans_wrapper/: __init__.py  beneficiarios.py  beneficiarios_utils.py  core.py  demonstracoes_contabeis.py  download_utils.py  enums.py  tests.py  utils.py
src/ans_wrapper/beneficiarios/: __init__.py  beneficiarios.py  beneficiarios_utils.py
src/ans_wrapper/demonstracoes_contabeis/: __init__.py  demonstracoes_contabeis.py
tests/: test.py  test_beneficiarios.py  test_main.py  testing.py
