[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ans-wrapper"
version = "0.1.1"
description = "A minimal ans-wrapper project"
authors = [
  { name = "Mousta Bazzoun", email = "bazzounmousta@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
  "requests",
  "beautifulsoup4",
  "pandas",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "nox",
  "pyink",
  "flake8",
  "isort",
  "mypy",
  "pylint",
  "python-dotenv",
  "pytest",
  "sphinx"
]

[tool.black]
line-length = 80
